--- a/client/src/app/views/genes/genes-browse/genes-browse.component.html
+++ b/client/src/app/views/genes/genes-browse/genes-browse.component.html
@@ -90,15 +90,15 @@
                   </td>
                   <td>
                     <p nz-typography>
-                      <span *ngFor="let disease of gene.diseases" >
-                        <cvc-disease-tag [disease]="disease"></cvc-disease-tag>
+                      <span>
+                        <cvc-tag-pileup tagType='disease' [tags]="gene.diseases" [matchingText]="diseaseInput"> </cvc-tag-pileup>
                       </span>
                     </p>
                   </td>
                   <td>
                     <p nz-typography>
-                      <span *ngFor="let drug of gene.drugs" >
-                        <cvc-drug-tag [drug]="drug"></cvc-drug-tag>
+                      <span>
+                        <cvc-tag-pileup tagType='drug' [tags]="gene.drugs" [matchingText]="drugInput"> </cvc-tag-pileup>
                       </span>
                     </p>
                   </td>
