--- a/client/src/app/views/genes/genes-browse/genes-browse.component.less
+++ b/client/src/app/views/genes/genes-browse/genes-browse.component.less
@@ -1,11 +1,1 @@
-:host {
-  display: block;
-}
-
-nz-page-header {
-  background-color: white;
-}
-
-nz-table {
-    min-height: 500px;
-}
+@import 'overrides/entity-page-header.overrides.less';
