--- a/client/src/app/views/drugs/drugs-detail/drugs-detail.component.html
+++ b/client/src/app/views/drugs/drugs-detail/drugs-detail.component.html
@@ -1,4 +1,5 @@
 <ng-container *ngIf="drug$ | ngrxPush as drug" >
+  <cvc-section-navigation [displayName]="drug.name"> </cvc-section-navigation>
   <nz-page-header class="site-page-header">
     <nz-page-header-title>
       <nz-space nzDirection="horizontal">
