--- a/client/src/app/views/genes/genes-home/genes-home.component.html
+++ b/client/src/app/views/genes/genes-home/genes-home.component.html
@@ -1,9 +1,6 @@
 <cvc-section-navigation> </cvc-section-navigation>
 <nz-page-header class="site-page-header">
 
-  <!--avatar-->
-  <!-- <nz-avatar nz-page-header-avatar nzIcon="civic:gene"> </nz-avatar> -->
-
   <!--title-->
   <nz-page-header-title>
     <i nz-icon nzType="civic:gene"></i>
@@ -12,12 +9,12 @@
 
   <!--content-->
   <nz-page-header-content>
-    <div nz-row>
+    <nz-row>
       <nz-col [nzSpan]="24">
         <div class="content">
           <cvc-genes-browse-table></cvc-genes-browse-table>
         </div>
       </nz-col>
-    </div>
+    </nz-row>
   </nz-page-header-content>
 </nz-page-header>
