--- a/client/src/app/components/genes/genes-browse-table/genes-browse-table.component.html
+++ b/client/src/app/components/genes/genes-browse-table/genes-browse-table.component.html
@@ -1,1 +1,98 @@
-<p>genes-browse-table works!</p>
+<ng-container *ngIf="{ value: data$ | ngrxPush } as data">
+  <nz-table #genesTable
+    [nzData]="(genes$ | ngrxPush)"
+    [nzLoading]="(isLoading$ | ngrxPush)"
+    [nzFrontPagination]="false"
+    [nzShowPagination]="false"
+  >
+    <thead (nzSortOrderChange)="onSortChanged($event)" >
+      <tr>
+        <th nzWidth="10%" [nzColumnKey]="sortColumns.EntrezSymbol" [nzSortFn]="true">
+          Name
+        </th>
+        <th nzWidth="20%" [nzColumnKey]="sortColumns.GeneAlias" [nzSortFn]="true">
+          Aliases
+        </th>
+        <th nzWidth="25%" [nzColumnKey]="sortColumns.DiseaseName" [nzSortFn]="true">
+          Diseases
+        </th>
+        <th nzWidth="25%" [nzColumnKey]="sortColumns.DrugName" [nzSortFn]="true">
+          Drugs
+        </th>
+        <th nzWidth="3%" nzRight [nzColumnKey]="sortColumns.VariantCount" [nzSortFn]="true"><i nz-icon nzType="civic:variant" nz-tooltip nzTooltipTitle="Variant count"></i></th>
+        <th nzWidth="3%" nzRight [nzColumnKey]="sortColumns.EvidenceItemCount" [nzSortFn]="true"><i nz-icon nzType="civic:evidence" nz-tooltip nzTooltipTitle="Evidence count"></i></th>
+        <th nzWidth="3%" nzRight [nzColumnKey]="sortColumns.AssertionCount" [nzSortFn]="true"><i nz-icon nzType="civic:assertion" nz-tooltip nzTooltipTitle="Assertion count"></i></th>
+      </tr>
+      <tr>
+        <th>
+          <nz-input-group [nzSuffix]="nameInputClearTpl">
+            <input type="text" nz-input placeholder="Search name" [(ngModel)]="nameInput" (ngModelChange)="onModelUpdated($event)" />
+          </nz-input-group>
+          <ng-template #nameInputClearTpl>
+            <i nz-icon class="ant-input-clear-icon" nzTheme="fill" nzType="close-circle" *ngIf="nameInput" (click)="nameInput = undefined; onModelUpdated(undefined)"></i>
+          </ng-template>
+        </th>
+        <th>
+          <nz-input-group [nzSuffix]="aliasInputClearTpl">
+            <input type="text" nz-input placeholder="Search alias" [(ngModel)]="aliasInput" (ngModelChange)="onModelUpdated($event)" />
+          </nz-input-group>
+          <ng-template #aliasInputClearTpl>
+            <i nz-icon class="ant-input-clear-icon" nzTheme="fill" nzType="close-circle" *ngIf="aliasInput" (click)="aliasInput = undefined; onModelUpdated(undefined)"></i>
+          </ng-template>
+        </th>
+        <th>
+          <nz-input-group [nzSuffix]="diseaseInputClearTpl">
+            <input type="text" nz-input placeholder="Search disease" [(ngModel)]="diseaseInput" (ngModelChange)="onModelUpdated($event)" />
+          </nz-input-group>
+          <ng-template #diseaseInputClearTpl>
+            <i nz-icon class="ant-input-clear-icon" nzTheme="fill" nzType="close-circle" *ngIf="diseaseInput" (click)="diseaseInput = undefined; onModelUpdated(undefined)"></i>
+          </ng-template>
+        </th>
+        <th>
+          <nz-input-group [nzSuffix]="drugInputClearTpl">
+            <input type="text" nz-input placeholder="Search drug" [(ngModel)]="drugInput" (ngModelChange)="onModelUpdated($event)" />
+          </nz-input-group>
+          <ng-template #drugInputClearTpl>
+            <i nz-icon class="ant-input-clear-icon" nzTheme="fill" nzType="close-circle" *ngIf="drugInput" (click)="drugInput = undefined; onModelUpdated(undefined)"></i>
+          </ng-template>
+        </th>
+        <th></th>
+        <th></th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let gene of genesTable.data">
+        <td>
+          <cvc-gene-tag [gene]="gene"></cvc-gene-tag>
+        </td>
+        <td>
+          <span *ngFor="let alias of gene.aliases; last as isLast" >
+            {{ alias.name }}{{ isLast ? '' : ', ' }}
+          </span>
+        </td>
+        <td>
+          <p nz-typography>
+            <span>
+              <cvc-tag-pileup tagType='disease' [tags]="gene.diseases" [matchingText]="diseaseInput"> </cvc-tag-pileup>
+            </span>
+          </p>
+        </td>
+        <td>
+          <p nz-typography>
+            <span>
+              <cvc-tag-pileup tagType='drug' [tags]="gene.drugs" [matchingText]="drugInput"> </cvc-tag-pileup>
+            </span>
+          </p>
+        </td>
+        <td nzRight>{{gene.variantCount}}</td>
+        <td nzRight>{{gene.evidenceItemCount}}</td>
+        <td nzRight>{{gene.assertionCount}}</td>
+      </tr>
+      <tr *ngrxLet="pageInfo$ as pageInfo">
+        <button *ngIf="pageInfo.hasNextPage" nz-button nzBlock (click)="loadMore(pageInfo.endCursor)">Load More</button>
+      </tr>
+    </tbody>
+  </nz-table>
+</ng-container>
+<ng-template #loadingTemplate><i nz-icon nzType="loading"></i></ng-template>
