--- a/client/src/app/components/genes/genes-browse-table/genes-browse-table.component.html
+++ b/client/src/app/components/genes/genes-browse-table/genes-browse-table.component.html
@@ -64,8 +64,7 @@
     <tbody>
       <tr *ngFor="let gene of genesTable.data">
         <td>
-          {{ gene.name}}
-          <!-- <cvc-gene-tag [gene]="gene"></cvc-gene-tag> -->
+          <cvc-gene-tag-r [gene]="gene"></cvc-gene-tag-r>
         </td>
         <td>
           <span *ngFor="let alias of gene.aliases; last as isLast" >
