renaming genes-browse-table to genes-table

--- a/client/src/app/views/genes/genes-home/genes-home.component.html
+++ b/client/src/app/views/genes/genes-home/genes-home.component.html
@@ -12,7 +12,7 @@
     <nz-row>
       <nz-col [nzSpan]="24">
         <div class="content">
-          <cvc-genes-browse-table></cvc-genes-browse-table>
+          <cvc-genes-table></cvc-genes-table>
         </div>
       </nz-col>
     </nz-row>
