--- a/client/src/app/views/drugs/drugs-summary/drugs-summary.component.html
+++ b/client/src/app/views/drugs/drugs-summary/drugs-summary.component.html
@@ -1,8 +1,23 @@
 <nz-space nzSize="middle" *ngIf="drugId" nzDirection="vertical" class="space-align-block">
+  <!-- assertions table card -->
   <nz-space-item>
-    <cvc-assertions-browse [drugId]="drugId"></cvc-assertions-browse>
+    <cvc-entity-table-card [cvcTitle]="assertionsCardTitle">
+      <cvc-assertions-table [drugId]="drugId"></cvc-assertions-table>
+    </cvc-entity-table-card>
+    <ng-template #assertionsCardTitle>
+      <i nz-icon nzType="civic:intervention"></i>
+      Drug Assertions
+    </ng-template>
   </nz-space-item>
+
+  <!-- evidence table card -->
   <nz-space-item>
-    <cvc-evidence-browse [drugId]="drugId"></cvc-evidence-browse>
+    <cvc-entity-table-card [cvcTitle]="evidenceCardTitle">
+      <cvc-evidence-table [drugId]="drugId"></cvc-evidence-table>
+    </cvc-entity-table-card>
+    <ng-template #evidenceCardTitle>
+      <i nz-icon nzType="civic:intervention"></i>
+      Drug Evidence
+    </ng-template>
   </nz-space-item>
 </nz-space>
