--- a/client/src/app/views/drugs/drugs-detail/drugs-detail.component.html
+++ b/client/src/app/views/drugs/drugs-detail/drugs-detail.component.html
@@ -10,9 +10,9 @@
       </nz-space>
     </nz-page-header-title>
     <nz-page-header-extra *ngIf="drug.ncitId">
-      <cvc-link-tag-r [href]="drug.drugUrl" tooltip="View in the NCIthesaurus">
+      <cvc-link-tag [href]="drug.drugUrl" tooltip="View in the NCIthesaurus">
         {{ drug.ncitId }}
-      </cvc-link-tag-r>
+      </cvc-link-tag>
     </nz-page-header-extra>
     <nz-page-header-content>
       <div class="content">
