popover tag rename

--- a/client/src/app/components/genes/gene-tag/gene-tag.component.html
+++ b/client/src/app/components/genes/gene-tag/gene-tag.component.html
@@ -13,7 +13,7 @@
     <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
   <ng-template #genePopover>
-    <cvc-gene-popover-r [geneId]="gene.id"></cvc-gene-popover-r>
+    <cvc-gene-popover [geneId]="gene.id"></cvc-gene-popover>
   </ng-template>
 </ng-template>
 
