--- a/client/src/app/components/drugs/cvc-drug-tag/cvc-drug-tag.component.html
+++ b/client/src/app/components/drugs/cvc-drug-tag/cvc-drug-tag.component.html
@@ -15,7 +15,7 @@
   </nz-tag>
 
   <ng-template #drugPopover>
-    <cvc-drug-popover-r [drugId]="drug.id"></cvc-drug-popover-r>
+    <cvc-drug-popover [drugId]="drug.id"></cvc-drug-popover>
   </ng-template>
 </ng-template>
 
