moved suggest-revision created genes/revise path, moved suggest-revision

--- a/client/src/app/views/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.html
@@ -26,7 +26,7 @@
 
           <!-- add revision btn -->
           <nz-space-item>
-            <button routerLink="suggest-revision"
+            <button [routerLink]="['../', gene.id, 'revise']"
               *ngIf="viewer.signedIn"
               routerLinkActive
               #rlaComments="routerLinkActive"
