moved genes-suggest page to genes-revise view dir

--- a/client/src/app/views/genes/genes-revise/genes-revise.view.html
+++ b/client/src/app/views/genes/genes-revise/genes-revise.view.html
@@ -4,8 +4,8 @@
   <nz-page-header class="site-page-header">
 
     <!-- title -->
-    <nz-page-header-title cvcFlaggableOptions
-      [ngClass]="{ 'flagged': gene.flags.totalCount > 0 }">
+    <nz-page-header-title cvcFlaggableOptions>
+      REVISE
       <i nz-icon
         nzType="civic:gene"></i> {{ gene.name }}
     </nz-page-header-title>
