genes-details, genes-revise views lazy-loaded

--- a/client/src/app/views/genes/genes-detail/genes-detail.view.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.view.html
@@ -26,7 +26,7 @@
 
           <!-- add revision btn -->
           <nz-space-item>
-            <button [routerLink]="['../', gene.id, 'revise']"
+            <button [routerLink]="['/genes/revise', gene.id, 'suggest']"
               *ngIf="viewer.signedIn"
               routerLinkActive
               #rlaComments="routerLinkActive"
