--- a/client/src/app/views/genes/genes-detail/genes-summary/genes-summary.page.html
+++ b/client/src/app/views/genes/genes-detail/genes-summary/genes-summary.page.html
@@ -20,10 +20,11 @@
 
               <!-- description -->
               <nz-descriptions-item nzTitle="Description">
-                <p *ngIf="gene.description; else noDescription" nz-typography
+                <p *ngIf="gene.description; else noDescription"
+                  nz-typography
                   nzEllipsis
                   nzExpandable
-                  [nzEllipsisRows]="14">{{ gene.description }}</p>
+                  [nzEllipsisRows]="8">{{ gene.description }}</p>
 
                 <!-- noDescription Tpl -->
                 <ng-template #noDescription>
@@ -93,11 +94,39 @@
 
       </nz-col>
 
-      <!-- mygeneinfo col -->
+      <!-- last revision submitted/accepted, mygeneinfo col -->
       <nz-col nzSpan="12">
 
-        <!-- mygeneinfo -->
-        <cvc-my-gene-info [geneInfo]="myGeneInfo$ | ngrxPush"></cvc-my-gene-info>
+        <nz-space nzDirection="vertical">
+          <!-- status, curation events -->
+          <!-- <nz-space-item *ngIf="gene.lastSubmittedRevisionEvent !== null || gene.lastAcceptedRevisionEvent !== null"> -->
+          <nz-space-item>
+            <nz-descriptions nzLayout="horizontal"
+              nzSize="small"
+              nzBordered="true"
+              class="status-tags">
+
+              <!-- last revised by -->
+              <nz-descriptions-item nzTitle="Last Revised by">
+                <cvc-user-tag *ngIf="gene.lastSubmittedRevisionEvent !== null; else noEvent"
+                  [user]="gene.lastSubmittedRevisionEvent.originatingUser"></cvc-user-tag>
+              </nz-descriptions-item>
+
+              <!-- last revision accepted -->
+              <nz-descriptions-item nzTitle="Last Revision Accepted by">
+                <cvc-user-tag *ngIf="gene.lastAcceptedRevisionEvent !== null; else noEvent"
+                  [user]="gene.lastAcceptedRevisionEvent.originatingUser"></cvc-user-tag>
+              </nz-descriptions-item>
+
+              <ng-template #noEvent>No revisions</ng-template>
+            </nz-descriptions>
+          </nz-space-item>
+
+          <!-- mygeneinfo -->
+          <nz-space-item>
+            <cvc-my-gene-info [geneInfo]="myGeneInfo$ | ngrxPush"></cvc-my-gene-info>
+          </nz-space-item>
+        </nz-space>
 
       </nz-col>
     </nz-row>
