gene-suggest now uses route params observable to set geneId instead of route snapshot

--- a/client/src/app/views/genes/genes-revise/genes-suggest/genes-suggest.page.html
+++ b/client/src/app/views/genes/genes-revise/genes-suggest/genes-suggest.page.html
@@ -1,7 +1,10 @@
 <nz-row [nzGutter]="16">
   <nz-col nzSpan="16">
-    <cvc-gene-suggest-revision-form [geneId]="geneId">
-    </cvc-gene-suggest-revision-form>
+    <ng-container *ngIf="geneId; else loadingGene">
+      <cvc-gene-suggest-revision-form [geneId]="geneId">
+      </cvc-gene-suggest-revision-form>
+    </ng-container>
+    <ng-template #loadingGene>Loading Gene...</ng-template>
   </nz-col>
   <nz-col nzSpan="8">
     <nz-card nzTitle="Instructions"
