--- a/client/src/app/components/genes/genes-table/genes-table.component.html
+++ b/client/src/app/components/genes/genes-table/genes-table.component.html
@@ -11,19 +11,13 @@
           [nzSortFn]="true">
           Name
         </th>
-        <th nzWidth="20%"
-          [nzColumnKey]="sortColumns.GeneAlias"
-          [nzSortFn]="true">
+        <th nzWidth="20%">
           Aliases
         </th>
-        <th nzWidth="25%"
-          [nzColumnKey]="sortColumns.DiseaseName"
-          [nzSortFn]="true">
+        <th nzWidth="25%">
           Diseases
         </th>
-        <th nzWidth="25%"
-          [nzColumnKey]="sortColumns.DrugName"
-          [nzSortFn]="true">
+        <th nzWidth="25%">
           Drugs
         </th>
         <th nzWidth="3%"
