gene-revise.form's formModel now property typed

--- a/client/src/app/forms/genes/forms/gene-revise/gene-revise.form.html
+++ b/client/src/app/forms/genes/forms/gene-revise/gene-revise.form.html
@@ -39,13 +39,13 @@
     </nz-form-control>
   </nz-form-item>
 </form>
-<!-- <div nz-row>
-     <div nz-col nzSpan="12">
-     <ngx-json-viewer *ngIf="formGroup"
-     [json]="formGroup.value"></ngx-json-viewer>
-     </div>
-     <div nz-col nzSpan="12">
-     <ngx-json-viewer *ngIf="formModel"
-     [json]="formModel"></ngx-json-viewer>
-     </div>
-     </div> -->
+<div nz-row>
+  <div nz-col nzSpan="12">
+    <ngx-json-viewer *ngIf="formGroup"
+      [json]="formGroup.value"></ngx-json-viewer>
+  </div>
+  <div nz-col nzSpan="12">
+    <ngx-json-viewer *ngIf="formModel"
+      [json]="formModel"></ngx-json-viewer>
+  </div>
+</div>
