--- a/client/src/app/forms/genes/forms/gene-revise/gene-revise.form.html
+++ b/client/src/app/forms/genes/forms/gene-revise/gene-revise.form.html
@@ -21,7 +21,8 @@
   <formly-form [form]="formGroup"
     [fields]="formFields"
     [model]="formModel"
-    [options]="formOptions"></formly-form>
+    [options]="formOptions"
+    (modelChange)="formModel = $event"></formly-form>
   <nz-form-item *ngIf="!(submitSuccess$ | async)">
     <nz-form-control>
       <cvc-form-buttons>
