--- a/client/src/app/views/genes/genes-detail/genes-detail.view.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.view.html
@@ -51,7 +51,12 @@
             </button>
           </nz-space-item>
 
+          <nz-space-item>
+            <cvc-entity-subscription-button *ngIf="viewer.signedIn && subscribable" [viewer]="viewer" [subscribableId]="subscribable.id" typename="Gene">
+            </cvc-entity-subscription-button>
+          </nz-space-item>
         </nz-space>
+
       </nz-page-header-extra>
 
       <nz-page-header-content>
