--- a/client/src/app/views/assertions/assertions-flags/assertions-flags.component.html
+++ b/client/src/app/views/assertions/assertions-flags/assertions-flags.component.html
@@ -1,27 +1,1 @@
-<nz-row [nzGutter]="16">
-  <nz-col nzSpan="16" >
-    <cvc-flag-list [flaggable]="flaggable"></cvc-flag-list>
-  </nz-col>
-  <nz-col nzSpan="8" >
-    <nz-card nzTitle="Instructions" nz-type="inner">
-      <nz-space nzDirection="vertical" style="width: 100%">
-        <nz-space-item>
-          <nz-skeleton
-            [nzParagraph]="{ rows: 1 }"></nz-skeleton>
-        </nz-space-item>
-        <nz-space-item>
-          <nz-skeleton
-            [nzParagraph]="{ rows: 3 }"></nz-skeleton>
-        </nz-space-item>
-        <nz-space-item>
-          <nz-skeleton
-            [nzParagraph]="{ rows: 4 }"></nz-skeleton>
-        </nz-space-item>
-        <nz-space-item>
-          <nz-skeleton
-            [nzParagraph]="{ rows: 5 }"></nz-skeleton>
-        </nz-space-item>
-      </nz-space>
-    </nz-card>
-  </nz-col>
-</nz-row>
+<cvc-flag-list-and-filter [flaggable]="flaggable"></cvc-flag-list-and-filter>
