add popover specific endpoints and use them

--- a/client/src/app/components/drugs/cvc-drug-popover/cvc-drug-popover.component.html
+++ b/client/src/app/components/drugs/cvc-drug-popover/cvc-drug-popover.component.html
@@ -23,7 +23,7 @@
         </nz-descriptions-item>
         <nz-descriptions-item nzTitle="Evidence"
           nzSpan="2">
-          {{d.evidenceCount}}
+          {{d.evidenceItemCount}}
         </nz-descriptions-item>
       </nz-descriptions>
     </nz-card>
